# twitterclone

./: .gitignore  pyproject.toml
.history/authentication/: forms_20200224160459.py  forms_20200224160525.py  forms_20200224160635.py  forms_20200224160643.py  forms_20200224160651.py  forms_20200224160653.py  forms_20200224160743.py  forms_20200224160744.py  forms_20200224160801.py  forms_20200224160803.py  forms_20200224160805.py  forms_20200224160807.py  forms_20200224160811.py  forms_20200224160820.py  forms_20200224160825.py  forms_20200224160827.py  forms_20200224160830.py  forms_20200224160932.py  forms_20200224160934.py  forms_20200224160950.py  forms_20200224160952.py  forms_20200224160954.py  forms_20200224160957.py  forms_20200224161003.py  forms_20200224161004.py  forms_20200224161006.py  forms_20200224161008.py  forms_20200224161017.py  forms_20200224161021.py  forms_20200224161027.py  forms_20200224161029.py  forms_20200224161032.py  models_20200224160308.py  models_20200224160309.py  models_20200224160313.py  models_20200224160324.py  models_20200224160337.py  models_20200224160344.py  models_20200224160345.py  models_20200224160350.py  (+50 more)
.history/tweet/: forms_20200224171015.py  forms_20200224171017.py  forms_20200224171022.py  forms_20200224171024.py  forms_20200224171025.py  (+70 more)
notification/: models.py  urls.py  views.py
templates/: index.html  notifications.html  tweets.html  user.html
tweet/: forms.py  models.py  urls.py  views.py
twitterclone/: settings.py  urls.py  views.py
twitteruser/: admin.py  forms.py  models.py  urls.py  views.py
(+38 files in other folders)
