[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "Basic Twitter clone in django"
authors = ["Enrique Galindo <egalindo@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
